--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
   <div id="content">
     <div id="background-image"></div>
-    <div id="message" class="flicker">HACKED SUCCESS BY OMER ISLAM FREE PALESTINE</div>
+    <div id="message" class="flicker">HACKED BY OMER</div>
 
     <!-- كلمات وهمية تنتشر -->
     <div class="moving-text" style="top: 10%; animation-duration: 6s;">Access Granted... Initializing...</div>
